--- a/templates/JogoDaMemoria.html
+++ b/templates/JogoDaMemoria.html
@@ -8,7 +8,7 @@
   <script src="..\scripts\jogoDaMemoria.js" charset="utf-8"></script>
 
   <marquee behavior="scroll" direction="right"  class="iconehead">
-    <a class="joguinhosDaAna" href="file:///C:/Users/ana.281004/trabalho-pw-jogos/trabalho-pw-jogos/menu.html">Joguinhos da Ana</a
+    <a class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</a
 ></marquee>
 
 </head>
