--- a/templates/JogoDaCobrinha.html
+++ b/templates/JogoDaCobrinha.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/style/cobrinha.css">
+    <link rel="stylesheet" href="../style/cobrinha.css">
     
     <title>Snake Game</title>
 </head>
@@ -27,6 +27,6 @@
     </div>
 
     <canvas width="600" height="600"></canvas>
-    <script src="/scripts/jogoDaCobrinha.js"></script>
+    <script src="../scripts/jogoDaCobrinha.js"></script>
 </body>
 </html>
