--- a/templates/JogoDaCobrinha.html
+++ b/templates/JogoDaCobrinha.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <script src="..\scripts\jogoDaMemoria.js" charset="utf-8"></script>
+    <script src="..\scripts/menu.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style/cobrinha.css">
     
-    <title>Snake Game</title>
+    <title>Jogo da Cobrinha</title>
+    <marquee behavior="scroll" direction="right"  class="iconehead">
+        <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button
+   ></marquee>
 </head>
 <body>
     <div class="score">score: <span class="score--value">00</span></div>
