--- a/templates/JogoDaMemoria.html
+++ b/templates/JogoDaMemoria.html
@@ -6,16 +6,15 @@
   <title>Jogos</title>
   <link rel="stylesheet" href="..\style\jogos.css"></link>
   <script src="..\scripts\jogoDaMemoria.js" charset="utf-8"></script>
+  <script src="..\scripts/menu.js"></script>
 
   <marquee behavior="scroll" direction="right"  class="iconehead">
-    <a class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</a
-></marquee>
-
+    <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button>
+  </marquee>
 </head>
 <body>
-<div class="jogoDaMemoria">
-  
-  <p>Score:<span id="result"></span></p>
+  <div class="jogoDaMemoria">
+    <p>Score:<span id="result"></span></p>
   <div class="grid">
   </div>
 </div>
