--- a/templates/JogoDoSimon.html
+++ b/templates/JogoDoSimon.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Original+Surfer&effect=emboss' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="../style/simon.css">
 
   <audio id="clip1">
   	<source src="..\audios\simonSound1.mp3"></source>
@@ -21,6 +21,11 @@
   <audio id="clip4">
   	<source src="..\audios\simonSound4.mp3"></source>
   </audio>
+
+  <title>Jogo da Cobrinha</title>
+  <marquee behavior="scroll" direction="right"  class="iconehead">
+      <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button>
+    </marquee>
 </head>
 
 <body>
@@ -47,7 +52,7 @@
     </div>
   </div>
 
-  <script  src="../scripts/index.js"></script>
+  <script  src="../scripts/jogoDoSimon.js"></script>
 
 </body>
 </html>
