--- a/style/cobrinha.css
+++ b/style/cobrinha.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: #191919;
+    background-color: #ffffff;
     display: flex;
     min-height: 100vh;
     align-items: center;
