--- a/style/cobrinha.css
+++ b/style/cobrinha.css
@@ -7,12 +7,26 @@
     font-family: "Poppings", sans-serif;
 }
 
+.iconehead{
+    background-color: blueviolet;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.joguinhosDaAna{
+    color: chartreuse;
+    text-decoration:none;
+    font-size: 50px;
+    font-style: unset;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+  
+
 body {
-    background-color: #ffffff;
+    background-color: #696969;
     display: flex;
     min-height: 100vh;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     color: white;
 }
