--- a/style/simon.css
+++ b/style/simon.css
@@ -1,11 +1,13 @@
 body {
-  background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/nasty_fabric.png)
+  background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/nasty_fabric.png);
+  background-color: hsl(118, 100%, 78%);
 }
 
 
 .iconehead{
   background-color: blueviolet;
   text-align: center;
+  border-radius: 10px;
 }
 
 .joguinhosDaAna{
@@ -14,8 +16,9 @@ body {
   font-size: 50px;
   font-style: unset;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  all: initial; 
+  background-color: none;
 }
+
 
 .toggle {
   margin-left: 20px;
