--- a/style/memoria.css
+++ b/style/memoria.css
@@ -2,6 +2,7 @@
   body{
     flex-direction:column ;
     background-color:rgb(164, 247, 161);
+    border-radius: 10px;
   }
 
   .grid {
@@ -38,5 +39,10 @@
     width: 150px;
     height: 150px;
   } 
+
+  .jogoDaMemoria{
+    margin-top: 10%;
+
+  }
 
   
