--- a/style/jogos.css
+++ b/style/jogos.css
@@ -37,6 +37,7 @@ p{
   display: flex;
   flex-direction: column;
   padding: 10px;
+  margin: auto;
 }
 
 button {
@@ -49,9 +50,9 @@ button {
   height: 100px;
 }
 
-element.style {
-  width: 150px;
-  height: 150px;
+img {
+  width: 100px;
+  height: 100px;
 } 
 .items-menu{
   display: inline-flex;
@@ -61,9 +62,8 @@ element.style {
   background-color: rgb(199, 255, 199);
   padding: 0;
   justify-content: center;
-  margin-left: 38%;
-  margin-top: 10%;
+  margin: auto;
+  width: 95%;
+  margin: 30px 30px 30px 30px;
 
-  
-  
 }
