--- a/style/pinball.css
+++ b/style/pinball.css
@@ -4,25 +4,26 @@
 	box-sizing: border-box;
 }
 
-html, body {
-	height: 100%;
-	overflow: hidden;
+body {
+	flex-direction: column;
 }
 
 body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 0;
 	color: #dee2e6;
 	background-color: #212529;
 	font-family: 'Hind', sans-serif;
 	text-transform: uppercase;
 }
+
+
 .iconehead{
 
 	background-color: blueviolet;
 	text-align: center;
+	border-radius: 10px;
   
   
   }
@@ -35,8 +36,11 @@ body {
   }
 
 .container {
+	margin-top: 0;
 	position: relative;
 	line-height: 0;
+	display: flex;
+    flex-direction: column;
 }
 
 .score {
